<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/spacing_small"
        android:scaleType="centerCrop"
        android:src="@drawable/explorer1" />

    <TextView
        android:id="@+id/tvHeaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/spacing_small"
        android:drawableStart="@drawable/ic_map"
        android:elevation="@dimen/spacing_large"
        android:padding="@dimen/spacing_large"
        android:text="@string/explore"
        android:textAppearance="@style/CustomTextAppearance.Bold"
        android:textColor="@color/white"
        android:textSize="@dimen/font_xxxlarge" />

    <ImageView
        android:id="@+id/ivCurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/spacing_small"
        android:elevation="@dimen/spacing_large"
        app:srcCompat="@drawable/ic_my_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ivHeaderImage"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvSection"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:itemCount="4"
            tools:listitem="@layout/list_section" />


        <TextView
            android:id="@+id/tvNoResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/msg_no_result"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/msg_new_explore" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRestaurant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10dp" />


    </LinearLayout>
</RelativeLayout>